parser.output
State 123 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def_list compound_stmt

    3 fpar_list: %empty
    4          | fpar_def fpar_def_list

    5 fpar_def_list: %empty
    6              | ',' fpar_def fpar_def_list

    7 fpar_def: T_id ':' type
    8         | T_id ':' "reference" type

    9 type: data_type
   10     | data_type '[' ']'

   11 data_type: "int"
   12          | "byte"

   13 r_type: data_type
   14       | "proc"

   15 local_def_list: %empty
   16               | local_def local_def_list

   17 local_def: func_def
   18          | var_def

   19 var_def: T_id ':' data_type ';'
   20        | T_id ':' data_type '[' T_const ']' ';'

   21 compound_stmt: '{' stmt_list '}'

   22 stmt_list: %empty
   23          | stmt stmt_list

   24 stmt: ';'
   25     | l_value "=" expr ';'
   26     | compound_stmt
   27     | func_call ';'
   28     | "if" '(' cond ')' stmt
   29     | "if" '(' cond ')' stmt "else" stmt
   30     | "while" '(' cond ')' stmt
   31     | "return" ';'
   32     | "return" expr ';'

   33 l_value: T_id
   34        | T_id '[' expr ']'
   35        | T_string

   36 expr: T_const
   37     | T_char
   38     | l_value
   39     | '(' expr ')'
   40     | func_call
   41     | '+' expr
   42     | '-' expr
   43     | expr '+' expr
   44     | expr '-' expr
   45     | expr '*' expr
   46     | expr '/' expr
   47     | expr '%' expr

   48 func_call: T_id '(' ')'
   49          | T_id '(' expr expr_list ')'

   50 expr_list: %empty
   51          | ',' expr expr_list

   52 cond: "true"
   53     | "false"
   54     | '(' cond ')'
   55     | '!' cond
   56     | expr "==" expr
   57     | expr "!=" expr
   58     | expr '<' expr
   59     | expr '>' expr
   60     | expr "<=" expr
   61     | expr ">=" expr
   62     | cond '&' cond
   63     | cond '|' cond


Terminals, with rules where they appear

$end (0) 0
'!' (33) 55
'%' (37) 47
'&' (38) 62
'(' (40) 2 28 29 30 39 48 49 54
')' (41) 2 28 29 30 39 48 49 54
'*' (42) 45
'+' (43) 41 43
',' (44) 6 51
'-' (45) 42 44
'/' (47) 46
':' (58) 2 7 8 19 20
';' (59) 19 20 24 25 27 31 32
'<' (60) 58
'>' (62) 59
'[' (91) 10 20 34
']' (93) 10 20 34
'{' (123) 21
'|' (124) 63
'}' (125) 21
error (256)
"while" (258) 30
"if" (259) 28 29
"else" (260) 29
"return" (261) 31 32
"int" (262) 11
"byte" (263) 12
"reference" (264) 8
"proc" (265) 14
"true" (266) 52
"false" (267) 53
"==" (268) 56
">=" (269) 61
"<=" (270) 60
"!=" (271) 57
"=" (272) 25
T_char (273) 37
T_string (274) 35
T_id (275) 2 7 8 19 20 33 34 48 49
T_const (276) 20 36
UMINUS (277)
UPLUS (278)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
func_def (45)
    on left: 2, on right: 1 17
fpar_list (46)
    on left: 3 4, on right: 2
fpar_def_list (47)
    on left: 5 6, on right: 4 6
fpar_def (48)
    on left: 7 8, on right: 4 6
type (49)
    on left: 9 10, on right: 7 8
data_type (50)
    on left: 11 12, on right: 9 10 13 19 20
r_type (51)
    on left: 13 14, on right: 2
local_def_list (52)
    on left: 15 16, on right: 2 16
local_def (53)
    on left: 17 18, on right: 16
var_def (54)
    on left: 19 20, on right: 18
compound_stmt (55)
    on left: 21, on right: 2 26
stmt_list (56)
    on left: 22 23, on right: 21 23
stmt (57)
    on left: 24 25 26 27 28 29 30 31 32, on right: 23 28 29 30
l_value (58)
    on left: 33 34 35, on right: 25 38
expr (59)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47, on right: 25 32 34
    39 41 42 43 44 45 46 47 49 51 56 57 58 59 60 61
func_call (60)
    on left: 48 49, on right: 27 40
expr_list (61)
    on left: 50 51, on right: 49 51
cond (62)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63, on right: 28 29 30
    54 55 62 63


State 0

    0 $accept: . program $end

    T_id  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3


State 1

    2 func_def: T_id . '(' fpar_list ')' ':' r_type local_def_list compound_stmt

    '('  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


State 4

    2 func_def: T_id '(' . fpar_list ')' ':' r_type local_def_list compound_stmt

    T_id  shift, and go to state 6

    $default  reduce using rule 3 (fpar_list)

    fpar_list  go to state 7
    fpar_def   go to state 8


State 5

    0 $accept: program $end .

    $default  accept


State 6

    7 fpar_def: T_id . ':' type
    8         | T_id . ':' "reference" type

    ':'  shift, and go to state 9


State 7

    2 func_def: T_id '(' fpar_list . ')' ':' r_type local_def_list compound_stmt

    ')'  shift, and go to state 10


State 8

    4 fpar_list: fpar_def . fpar_def_list

    ','  shift, and go to state 11

    $default  reduce using rule 5 (fpar_def_list)

    fpar_def_list  go to state 12


State 9

    7 fpar_def: T_id ':' . type
    8         | T_id ':' . "reference" type

    "int"        shift, and go to state 13
    "byte"       shift, and go to state 14
    "reference"  shift, and go to state 15

    type       go to state 16
    data_type  go to state 17


State 10

    2 func_def: T_id '(' fpar_list ')' . ':' r_type local_def_list compound_stmt

    ':'  shift, and go to state 18


State 11

    6 fpar_def_list: ',' . fpar_def fpar_def_list

    T_id  shift, and go to state 6

    fpar_def  go to state 19


State 12

    4 fpar_list: fpar_def fpar_def_list .

    $default  reduce using rule 4 (fpar_list)


State 13

   11 data_type: "int" .

    $default  reduce using rule 11 (data_type)


State 14

   12 data_type: "byte" .

    $default  reduce using rule 12 (data_type)


State 15

    8 fpar_def: T_id ':' "reference" . type

    "int"   shift, and go to state 13
    "byte"  shift, and go to state 14

    type       go to state 20
    data_type  go to state 17


State 16

    7 fpar_def: T_id ':' type .

    $default  reduce using rule 7 (fpar_def)


State 17

    9 type: data_type .
   10     | data_type . '[' ']'

    '['  shift, and go to state 21

    $default  reduce using rule 9 (type)


State 18

    2 func_def: T_id '(' fpar_list ')' ':' . r_type local_def_list compound_stmt

    "int"   shift, and go to state 13
    "byte"  shift, and go to state 14
    "proc"  shift, and go to state 22

    data_type  go to state 23
    r_type     go to state 24


State 19

    6 fpar_def_list: ',' fpar_def . fpar_def_list

    ','  shift, and go to state 11

    $default  reduce using rule 5 (fpar_def_list)

    fpar_def_list  go to state 25


State 20

    8 fpar_def: T_id ':' "reference" type .

    $default  reduce using rule 8 (fpar_def)


State 21

   10 type: data_type '[' . ']'

    ']'  shift, and go to state 26


State 22

   14 r_type: "proc" .

    $default  reduce using rule 14 (r_type)


State 23

   13 r_type: data_type .

    $default  reduce using rule 13 (r_type)


State 24

    2 func_def: T_id '(' fpar_list ')' ':' r_type . local_def_list compound_stmt

    T_id  shift, and go to state 27

    $default  reduce using rule 15 (local_def_list)

    func_def        go to state 28
    local_def_list  go to state 29
    local_def       go to state 30
    var_def         go to state 31


State 25

    6 fpar_def_list: ',' fpar_def fpar_def_list .

    $default  reduce using rule 6 (fpar_def_list)


State 26

   10 type: data_type '[' ']' .

    $default  reduce using rule 10 (type)


State 27

    2 func_def: T_id . '(' fpar_list ')' ':' r_type local_def_list compound_stmt
   19 var_def: T_id . ':' data_type ';'
   20        | T_id . ':' data_type '[' T_const ']' ';'

    '('  shift, and go to state 4
    ':'  shift, and go to state 32


State 28

   17 local_def: func_def .

    $default  reduce using rule 17 (local_def)


State 29

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def_list . compound_stmt

    '{'  shift, and go to state 33

    compound_stmt  go to state 34


State 30

   16 local_def_list: local_def . local_def_list

    T_id  shift, and go to state 27

    $default  reduce using rule 15 (local_def_list)

    func_def        go to state 28
    local_def_list  go to state 35
    local_def       go to state 30
    var_def         go to state 31


State 31

   18 local_def: var_def .

    $default  reduce using rule 18 (local_def)


State 32

   19 var_def: T_id ':' . data_type ';'
   20        | T_id ':' . data_type '[' T_const ']' ';'

    "int"   shift, and go to state 13
    "byte"  shift, and go to state 14

    data_type  go to state 36


State 33

   21 compound_stmt: '{' . stmt_list '}'

    "while"   shift, and go to state 37
    "if"      shift, and go to state 38
    "return"  shift, and go to state 39
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    ';'       shift, and go to state 42
    '{'       shift, and go to state 33

    $default  reduce using rule 22 (stmt_list)

    compound_stmt  go to state 43
    stmt_list      go to state 44
    stmt           go to state 45
    l_value        go to state 46
    func_call      go to state 47


State 34

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def_list compound_stmt .

    $default  reduce using rule 2 (func_def)


State 35

   16 local_def_list: local_def local_def_list .

    $default  reduce using rule 16 (local_def_list)


State 36

   19 var_def: T_id ':' data_type . ';'
   20        | T_id ':' data_type . '[' T_const ']' ';'

    '['  shift, and go to state 48
    ';'  shift, and go to state 49


State 37

   30 stmt: "while" . '(' cond ')' stmt

    '('  shift, and go to state 50


State 38

   28 stmt: "if" . '(' cond ')' stmt
   29     | "if" . '(' cond ')' stmt "else" stmt

    '('  shift, and go to state 51


State 39

   31 stmt: "return" . ';'
   32     | "return" . expr ';'

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56
    ';'       shift, and go to state 57

    l_value    go to state 58
    expr       go to state 59
    func_call  go to state 60


State 40

   35 l_value: T_string .

    $default  reduce using rule 35 (l_value)


State 41

   33 l_value: T_id .
   34        | T_id . '[' expr ']'
   48 func_call: T_id . '(' ')'
   49          | T_id . '(' expr expr_list ')'

    '('  shift, and go to state 61
    '['  shift, and go to state 62

    $default  reduce using rule 33 (l_value)


State 42

   24 stmt: ';' .

    $default  reduce using rule 24 (stmt)


State 43

   26 stmt: compound_stmt .

    $default  reduce using rule 26 (stmt)


State 44

   21 compound_stmt: '{' stmt_list . '}'

    '}'  shift, and go to state 63


State 45

   23 stmt_list: stmt . stmt_list

    "while"   shift, and go to state 37
    "if"      shift, and go to state 38
    "return"  shift, and go to state 39
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    ';'       shift, and go to state 42
    '{'       shift, and go to state 33

    $default  reduce using rule 22 (stmt_list)

    compound_stmt  go to state 43
    stmt_list      go to state 64
    stmt           go to state 45
    l_value        go to state 46
    func_call      go to state 47


State 46

   25 stmt: l_value . "=" expr ';'

    "="  shift, and go to state 65


State 47

   27 stmt: func_call . ';'

    ';'  shift, and go to state 66


State 48

   20 var_def: T_id ':' data_type '[' . T_const ']' ';'

    T_const  shift, and go to state 67


State 49

   19 var_def: T_id ':' data_type ';' .

    $default  reduce using rule 19 (var_def)


State 50

   30 stmt: "while" '(' . cond ')' stmt

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    l_value    go to state 58
    expr       go to state 72
    func_call  go to state 60
    cond       go to state 73


State 51

   28 stmt: "if" '(' . cond ')' stmt
   29     | "if" '(' . cond ')' stmt "else" stmt

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    l_value    go to state 58
    expr       go to state 72
    func_call  go to state 60
    cond       go to state 74


State 52

   37 expr: T_char .

    $default  reduce using rule 37 (expr)


State 53

   36 expr: T_const .

    $default  reduce using rule 36 (expr)


State 54

   41 expr: '+' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 75
    func_call  go to state 60


State 55

   42 expr: '-' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 76
    func_call  go to state 60


State 56

   39 expr: '(' . expr ')'

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 77
    func_call  go to state 60


State 57

   31 stmt: "return" ';' .

    $default  reduce using rule 31 (stmt)


State 58

   38 expr: l_value .

    $default  reduce using rule 38 (expr)


State 59

   32 stmt: "return" expr . ';'
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ';'  shift, and go to state 83


State 60

   40 expr: func_call .

    $default  reduce using rule 40 (expr)


State 61

   48 func_call: T_id '(' . ')'
   49          | T_id '(' . expr expr_list ')'

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56
    ')'       shift, and go to state 84

    l_value    go to state 58
    expr       go to state 85
    func_call  go to state 60


State 62

   34 l_value: T_id '[' . expr ']'

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 86
    func_call  go to state 60


State 63

   21 compound_stmt: '{' stmt_list '}' .

    $default  reduce using rule 21 (compound_stmt)


State 64

   23 stmt_list: stmt stmt_list .

    $default  reduce using rule 23 (stmt_list)


State 65

   25 stmt: l_value "=" . expr ';'

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 87
    func_call  go to state 60


State 66

   27 stmt: func_call ';' .

    $default  reduce using rule 27 (stmt)


State 67

   20 var_def: T_id ':' data_type '[' T_const . ']' ';'

    ']'  shift, and go to state 88


State 68

   52 cond: "true" .

    $default  reduce using rule 52 (cond)


State 69

   53 cond: "false" .

    $default  reduce using rule 53 (cond)


State 70

   55 cond: '!' . cond

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    l_value    go to state 58
    expr       go to state 72
    func_call  go to state 60
    cond       go to state 89


State 71

   39 expr: '(' . expr ')'
   54 cond: '(' . cond ')'

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    l_value    go to state 58
    expr       go to state 90
    func_call  go to state 60
    cond       go to state 91


State 72

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   56 cond: expr . "==" expr
   57     | expr . "!=" expr
   58     | expr . '<' expr
   59     | expr . '>' expr
   60     | expr . "<=" expr
   61     | expr . ">=" expr

    "=="  shift, and go to state 92
    ">="  shift, and go to state 93
    "<="  shift, and go to state 94
    "!="  shift, and go to state 95
    '>'   shift, and go to state 96
    '<'   shift, and go to state 97
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82


State 73

   30 stmt: "while" '(' cond . ')' stmt
   62 cond: cond . '&' cond
   63     | cond . '|' cond

    '|'  shift, and go to state 98
    '&'  shift, and go to state 99
    ')'  shift, and go to state 100


State 74

   28 stmt: "if" '(' cond . ')' stmt
   29     | "if" '(' cond . ')' stmt "else" stmt
   62 cond: cond . '&' cond
   63     | cond . '|' cond

    '|'  shift, and go to state 98
    '&'  shift, and go to state 99
    ')'  shift, and go to state 101


State 75

   41 expr: '+' expr .
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    $default  reduce using rule 41 (expr)


State 76

   42 expr: '-' expr .
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    $default  reduce using rule 42 (expr)


State 77

   39 expr: '(' expr . ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ')'  shift, and go to state 102


State 78

   43 expr: expr '+' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 103
    func_call  go to state 60


State 79

   44 expr: expr '-' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 104
    func_call  go to state 60


State 80

   45 expr: expr '*' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 105
    func_call  go to state 60


State 81

   46 expr: expr '/' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 106
    func_call  go to state 60


State 82

   47 expr: expr '%' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 107
    func_call  go to state 60


State 83

   32 stmt: "return" expr ';' .

    $default  reduce using rule 32 (stmt)


State 84

   48 func_call: T_id '(' ')' .

    $default  reduce using rule 48 (func_call)


State 85

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   49 func_call: T_id '(' expr . expr_list ')'

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ','  shift, and go to state 108

    $default  reduce using rule 50 (expr_list)

    expr_list  go to state 109


State 86

   34 l_value: T_id '[' expr . ']'
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ']'  shift, and go to state 110


State 87

   25 stmt: l_value "=" expr . ';'
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ';'  shift, and go to state 111


State 88

   20 var_def: T_id ':' data_type '[' T_const ']' . ';'

    ';'  shift, and go to state 112


State 89

   55 cond: '!' cond .
   62     | cond . '&' cond
   63     | cond . '|' cond

    $default  reduce using rule 55 (cond)


State 90

   39 expr: '(' expr . ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   56 cond: expr . "==" expr
   57     | expr . "!=" expr
   58     | expr . '<' expr
   59     | expr . '>' expr
   60     | expr . "<=" expr
   61     | expr . ">=" expr

    "=="  shift, and go to state 92
    ">="  shift, and go to state 93
    "<="  shift, and go to state 94
    "!="  shift, and go to state 95
    '>'   shift, and go to state 96
    '<'   shift, and go to state 97
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '%'   shift, and go to state 82
    ')'   shift, and go to state 102


State 91

   54 cond: '(' cond . ')'
   62     | cond . '&' cond
   63     | cond . '|' cond

    '|'  shift, and go to state 98
    '&'  shift, and go to state 99
    ')'  shift, and go to state 113


State 92

   56 cond: expr "==" . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 114
    func_call  go to state 60


State 93

   61 cond: expr ">=" . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 115
    func_call  go to state 60


State 94

   60 cond: expr "<=" . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 116
    func_call  go to state 60


State 95

   57 cond: expr "!=" . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 117
    func_call  go to state 60


State 96

   59 cond: expr '>' . expr

    T_char    shift, and go to state 52
    T_string  shift, and go to state 40
    T_id      shift, and go to state 41
    T_const   shift, and go to state 53
    '+'       shift, and go to state 54
    '-'       shift, and go to state 55
    '('       shift, and go to state 56

    l_value    go to state 58
    expr       go to state 118
    func_call  go to state 60


State 97

   58 cond: expr '<' . expr
